<resources>
    <string name="app_name">Camera2 API Enabler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>


    <string name="home">Home</string>
    <string name="about">About</string>

    <string name="menu_about">About</string>

    <string name="by_dedraks">by Dedraks</string>

    <string name="enable_api">Enable API</string>
    <string name="disable_api">Disable API</string>
    <string name="backup_library">Backup Library</string>
    <string name="replace_library">Replace Library</string>
    <string name="restore_library">Restore Library backup</string>
    <string name="reboot">Reboot</string>
    <string name="root_needed">Root is necessary to run this app!</string>
    <string name="about_credits">This tool was created by Carlos Garcia AKA dedraks.</string>
    <string name="permission_denied">Permission Denied!</string>

</resources>
